feat: integrate Upstash Redis for caching and rate limiting
- Added Redis configuration to environment setup in README.md
- Implemented Redis client wrapper with error handling and health checks in lib/redis.ts
- Created a test script for Redis client functionality in scripts/test-redis.ts
- Defined Redis client type interfaces in types/redis.ts
- Updated configuration schemas to include Redis settings
- Added Redis dependencies to package.json and package-lock.json

--- a/.shrimp/launchsaasfast/tasks.json
+++ b/.shrimp/launchsaasfast/tasks.json
@@ -5,10 +5,10 @@
       "name": "Setup Upstash Redis Client and Configuration",
       "description": "Create Redis client infrastructure for rate limiting and caching. Implement connection management, error handling, and basic Redis operations using Upstash REST API. Configure environment variables and add Redis configuration to existing hierarchical config system.",
       "notes": "Must use Upstash REST API for serverless compatibility. Include comprehensive error handling and connection monitoring. Follow existing config hierarchy pattern.",
-      "status": "pending",
+      "status": "completed",
       "dependencies": [],
       "createdAt": "2025-07-10T11:00:14.192Z",
-      "updatedAt": "2025-07-10T11:00:14.192Z",
+      "updatedAt": "2025-07-10T11:12:34.348Z",
       "relatedFiles": [
         {
           "path": "lib/redis.ts",
@@ -30,7 +30,9 @@
       ],
       "implementationGuide": "1. Create `/lib/redis.ts` with Upstash client using @upstash/redis\\n2. Add Redis config to `config/default.ts` following existing pattern\\n3. Environment variables: UPSTASH_REDIS_REST_URL, UPSTASH_REDIS_REST_TOKEN\\n4. Implement connection health check and retry logic\\n5. Add Redis schema validation with Zod\\n\\nPseudocode:\\n```typescript\\n// lib/redis.ts\\nclass RedisClient {\\n  constructor(config) { /* Upstash REST client */ }\\n  async get(key: string) { /* with error handling */ }\\n  async set(key: string, value: any, ttl?: number) { /* with expiration */ }\\n  async zadd(key: string, score: number, member: string) { /* for sliding window */ }\\n  async zremrangebyscore(key: string, min: number, max: number) { /* cleanup */ }\\n}\\n```",
       "verificationCriteria": "Redis client successfully connects to Upstash, performs basic operations (get/set/zadd/zrem), handles connection errors gracefully, and follows existing configuration patterns. Environment variables properly loaded and validated.",
-      "analysisResult": "Phase 3 Advanced Security Implementation: Build enterprise-grade security features on existing Next.js 15 + Supabase authentication foundation. Core architecture: leverage existing middleware.ts Phase 2 slot, hierarchical config pattern, device confidence scoring (30/25/20/25 weights), and strict TypeScript compliance. Integration points: Redis ZSET sliding window rate limiting, NIST AAL2-compliant 2FA/MFA with TOTP, structured security logging replacing console.log, and Resend email notifications. Must maintain shrimp-rules.md compliance and existing Auth→RateLimiting→Validation→BusinessLogic middleware ordering."
+      "analysisResult": "Phase 3 Advanced Security Implementation: Build enterprise-grade security features on existing Next.js 15 + Supabase authentication foundation. Core architecture: leverage existing middleware.ts Phase 2 slot, hierarchical config pattern, device confidence scoring (30/25/20/25 weights), and strict TypeScript compliance. Integration points: Redis ZSET sliding window rate limiting, NIST AAL2-compliant 2FA/MFA with TOTP, structured security logging replacing console.log, and Resend email notifications. Must maintain shrimp-rules.md compliance and existing Auth→RateLimiting→Validation→BusinessLogic middleware ordering.",
+      "summary": "Successfully implemented Upstash Redis client infrastructure with comprehensive error handling, health monitoring, and proper TypeScript integration. Created Redis client with sliding window operations support, added hierarchical configuration system integration, implemented environment variable handling with validation, and provided testing framework. All verification criteria met: Redis client connects to Upstash, performs all required operations (get/set/zadd/zrem), handles connection errors gracefully with retry logic, follows existing configuration patterns, and includes proper TypeScript types.",
+      "completedAt": "2025-07-10T11:12:34.342Z"
     },
     {
       "id": "de910114-fdc8-403f-add3-f6fa6fe20971",
