--- a/application/package.json
+++ b/application/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.4",
+    "@upstash/redis": "^1.35.1",
     "next": "15.3.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
@@ -36,6 +37,7 @@
     "supabase": "^2.30.4",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "zod": "^4.0.0"
   }
