feat: implement sliding window rate limiter with adaptive scoring and Redis integration

--- a/.shrimp/launchsaasfast/tasks.json
+++ b/.shrimp/launchsaasfast/tasks.json
@@ -39,14 +39,14 @@
       "name": "Implement Sliding Window Rate Limiter",
       "description": "Create adaptive rate limiting system using Redis ZSET with sliding window algorithm. Implement per-endpoint rate limits that adapt based on device confidence scores using the existing scoring formula from shrimp-rules.md.",
       "notes": "Must integrate with existing device confidence scoring system. Implement proper cleanup of expired entries. Add comprehensive rate limit headers.",
-      "status": "pending",
+      "status": "completed",
       "dependencies": [
         {
           "taskId": "ba2cf580-7cb5-41b5-aa71-abee84cb7b45"
         }
       ],
       "createdAt": "2025-07-10T11:00:14.192Z",
-      "updatedAt": "2025-07-10T11:00:14.192Z",
+      "updatedAt": "2025-07-10T11:20:41.825Z",
       "relatedFiles": [
         {
           "path": "lib/rate-limiter.ts",
@@ -68,7 +68,9 @@
       ],
       "implementationGuide": "1. Create `/lib/rate-limiter.ts` with sliding window algorithm\\n2. Use Redis ZSET for time-based tracking\\n3. Implement adaptive formula: `adaptiveLimit = baseLimit × (1 + confidenceScore/100)`\\n4. Configure rate limits per endpoint (signin: 5, signup: 3, verify: 10)\\n5. Return rate limit headers (X-RateLimit-Limit, X-RateLimit-Remaining)\\n\\nPseudocode:\\n```typescript\\nclass RateLimiter {\\n  async checkLimit(endpoint: string, identifier: string, confidenceScore: number) {\\n    const baseLimit = this.limits[endpoint].max;\\n    const adaptiveLimit = baseLimit * (1 + confidenceScore / 100);\\n    const window = this.limits[endpoint].window;\\n    \\n    // Use Redis ZSET sliding window\\n    const key = `rate:${endpoint}:${identifier}`;\\n    const now = Date.now();\\n    const windowStart = now - (window * 1000);\\n    \\n    // Remove old entries\\n    await redis.zremrangebyscore(key, 0, windowStart);\\n    \\n    // Count current requests\\n    const current = await redis.zcard(key);\\n    \\n    if (current >= adaptiveLimit) {\\n      return { allowed: false, remaining: 0 };\\n    }\\n    \\n    // Add current request\\n    await redis.zadd(key, now, crypto.randomUUID());\\n    await redis.expire(key, window);\\n    \\n    return { allowed: true, remaining: adaptiveLimit - current - 1 };\\n  }\\n}\\n```",
       "verificationCriteria": "Rate limiter correctly implements sliding window algorithm, adapts limits based on confidence scores, returns proper headers, handles Redis failures gracefully, and cleans up expired entries automatically.",
-      "analysisResult": "Phase 3 Advanced Security Implementation: Build enterprise-grade security features on existing Next.js 15 + Supabase authentication foundation. Core architecture: leverage existing middleware.ts Phase 2 slot, hierarchical config pattern, device confidence scoring (30/25/20/25 weights), and strict TypeScript compliance. Integration points: Redis ZSET sliding window rate limiting, NIST AAL2-compliant 2FA/MFA with TOTP, structured security logging replacing console.log, and Resend email notifications. Must maintain shrimp-rules.md compliance and existing Auth→RateLimiting→Validation→BusinessLogic middleware ordering."
+      "analysisResult": "Phase 3 Advanced Security Implementation: Build enterprise-grade security features on existing Next.js 15 + Supabase authentication foundation. Core architecture: leverage existing middleware.ts Phase 2 slot, hierarchical config pattern, device confidence scoring (30/25/20/25 weights), and strict TypeScript compliance. Integration points: Redis ZSET sliding window rate limiting, NIST AAL2-compliant 2FA/MFA with TOTP, structured security logging replacing console.log, and Resend email notifications. Must maintain shrimp-rules.md compliance and existing Auth→RateLimiting→Validation→BusinessLogic middleware ordering.",
+      "summary": "Sliding window rate limiter implementation completed successfully with adaptive scoring based on device confidence. Core features include Redis ZSET-based sliding window algorithm, adaptive rate limits using formula from shrimp-rules.md (adaptiveLimit = baseLimit * (1 + trustScore / 100)), comprehensive error handling with exponential backoff, TypeScript strict mode compliance, and singleton pattern for efficient resource management. All TypeScript compilation errors resolved, Redis client methods properly implemented with correct type signatures, and integration ready for middleware usage.",
+      "completedAt": "2025-07-10T11:20:41.823Z"
     },
     {
       "id": "e65b9e18-ffc7-41d1-b7f7-3f07c2bdd5f7",
