feat: implement adaptive rate limiting in middleware with endpoint-specific configuration and proper response headers

--- a/.shrimp/launchsaasfast/tasks.json
+++ b/.shrimp/launchsaasfast/tasks.json
@@ -77,14 +77,14 @@
       "name": "Integrate Rate Limiting into Middleware",
       "description": "Add rate limiting to the existing middleware.ts in the pre-reserved Phase 2 slot. Maintain the Auth→RateLimiting→Validation→BusinessLogic order specified in shrimp-rules.md. Extract device confidence score from existing auth context.",
       "notes": "Must maintain existing middleware architecture and not break Phase 1 authentication. Handle both authenticated and anonymous users appropriately.",
-      "status": "pending",
+      "status": "completed",
       "dependencies": [
         {
           "taskId": "de910114-fdc8-403f-add3-f6fa6fe20971"
         }
       ],
       "createdAt": "2025-07-10T11:00:14.192Z",
-      "updatedAt": "2025-07-10T11:00:14.192Z",
+      "updatedAt": "2025-07-10T11:26:57.173Z",
       "relatedFiles": [
         {
           "path": "middleware.ts",
@@ -106,7 +106,9 @@
       ],
       "implementationGuide": "1. Modify `/middleware.ts` to add rate limiting in Phase 2 slot\\n2. Extract confidence score from existing auth result\\n3. Apply rate limiting based on request path and user identifier\\n4. Return 429 responses with proper headers when limits exceeded\\n5. Pass rate limit info to downstream via headers\\n\\nPseudocode:\\n```typescript\\n// middleware.ts - Phase 2 integration\\nasync function withRateLimit(request: NextRequest, authResult: AuthResult) {\\n  const identifier = authResult.userId || getClientIP(request);\\n  const endpoint = extractEndpoint(request.nextUrl.pathname);\\n  const confidenceScore = authResult.confidenceScore || 0;\\n  \\n  if (requiresRateLimit(endpoint)) {\\n    const result = await rateLimiter.checkLimit(endpoint, identifier, confidenceScore);\\n    \\n    if (!result.allowed) {\\n      return {\\n        blocked: true,\\n        response: new Response('Rate limit exceeded', {\\n          status: 429,\\n          headers: {\\n            'X-RateLimit-Limit': result.limit.toString(),\\n            'X-RateLimit-Remaining': '0',\\n            'Retry-After': result.retryAfter.toString()\\n          }\\n        })\\n      };\\n    }\\n    \\n    // Add rate limit headers to successful requests\\n    request.headers.set('X-RateLimit-Remaining', result.remaining.toString());\\n  }\\n  \\n  return { blocked: false };\\n}\\n```",
       "verificationCriteria": "Middleware properly applies rate limiting in Phase 2, maintains existing auth flow, returns correct 429 responses with headers, and doesn't break existing functionality. Rate limiting works for both authenticated and anonymous users.",
-      "analysisResult": "Phase 3 Advanced Security Implementation: Build enterprise-grade security features on existing Next.js 15 + Supabase authentication foundation. Core architecture: leverage existing middleware.ts Phase 2 slot, hierarchical config pattern, device confidence scoring (30/25/20/25 weights), and strict TypeScript compliance. Integration points: Redis ZSET sliding window rate limiting, NIST AAL2-compliant 2FA/MFA with TOTP, structured security logging replacing console.log, and Resend email notifications. Must maintain shrimp-rules.md compliance and existing Auth→RateLimiting→Validation→BusinessLogic middleware ordering."
+      "analysisResult": "Phase 3 Advanced Security Implementation: Build enterprise-grade security features on existing Next.js 15 + Supabase authentication foundation. Core architecture: leverage existing middleware.ts Phase 2 slot, hierarchical config pattern, device confidence scoring (30/25/20/25 weights), and strict TypeScript compliance. Integration points: Redis ZSET sliding window rate limiting, NIST AAL2-compliant 2FA/MFA with TOTP, structured security logging replacing console.log, and Resend email notifications. Must maintain shrimp-rules.md compliance and existing Auth→RateLimiting→Validation→BusinessLogic middleware ordering.",
+      "summary": "Successfully integrated rate limiting into middleware Phase 2 slot maintaining Auth→RateLimiting→Validation→BusinessLogic order. Implementation includes adaptive rate limiting based on device confidence scores, proper 429 responses with rate limit headers, endpoint-specific configuration, fail-open behavior for Redis errors, and support for both authenticated and anonymous users. Rate limiting applies to authentication endpoints (signin, signup, forgot-password, verify-email, 2FA routes) with adaptive limits calculated using confidence scores. All TypeScript compilation successful and existing authentication flow preserved.",
+      "completedAt": "2025-07-10T11:26:57.171Z"
     },
     {
       "id": "105731cd-5d28-4f8b-ba1e-465c195b9f0a",
