feat: Implement AAL management system with NIST SP 800-63B compliance, including AAL checks for sensitive operations and session management

--- a/.shrimp/launchsaasfast/tasks.json
+++ b/.shrimp/launchsaasfast/tasks.json
@@ -190,14 +190,14 @@
       "name": "Implement AAL Management System",
       "description": "Create Authentication Assurance Level (AAL) management system compliant with NIST SP 800-63B. Implement AAL1 (basic auth) and AAL2 (MFA verified) logic with automatic upgrading and session management.",
       "notes": "Must integrate with existing device sessions table. Follow NIST guidelines for AAL requirements. Include proper logging of AAL changes.",
-      "status": "pending",
+      "status": "completed",
       "dependencies": [
         {
           "taskId": "db42c565-3f6d-490e-8e3d-dd660066b835"
         }
       ],
       "createdAt": "2025-07-10T11:00:14.192Z",
-      "updatedAt": "2025-07-10T11:00:14.192Z",
+      "updatedAt": "2025-07-10T11:45:21.002Z",
       "relatedFiles": [
         {
           "path": "lib/aal-manager.ts",
@@ -219,7 +219,9 @@
       ],
       "implementationGuide": "1. Create `/lib/aal-manager.ts` with AAL determination logic\\n2. Integrate with existing device sessions for AAL tracking\\n3. Implement AAL requirement checking for sensitive operations\\n4. Add AAL upgrade flow when higher assurance required\\n5. Update middleware to check AAL requirements\\n\\nPseudocode:\\n```typescript\\nclass AALManager {\\n  determineAAL(authMethod: string, mfaVerified: boolean, deviceTrust: string): AAL {\\n    if (mfaVerified || authMethod === 'backup_code') {\\n      return 'aal2';\\n    }\\n    \\n    if (deviceTrust === 'VERY_HIGH' && authMethod === 'password') {\\n      return 'aal1';\\n    }\\n    \\n    return 'aal1';\\n  }\\n  \\n  async requireAAL(userId: string, requiredAAL: AAL, currentAAL: AAL): Promise<AALCheckResult> {\\n    if (this.aalMeetsRequirement(currentAAL, requiredAAL)) {\\n      return { allowed: true };\\n    }\\n    \\n    return {\\n      allowed: false,\\n      upgradeRequired: true,\\n      requiredAAL,\\n      currentAAL\\n    };\\n  }\\n  \\n  async upgradeToAAL2(userId: string): Promise<void> {\\n    await this.updateDeviceSessionAAL(userId, 'aal2');\\n    await this.logAALUpgrade(userId);\\n  }\\n}\\n```",
       "verificationCriteria": "AAL system correctly determines authentication levels, enforces requirements for sensitive operations, upgrades AAL when MFA verified, and integrates with existing session management.",
-      "analysisResult": "Phase 3 Advanced Security Implementation: Build enterprise-grade security features on existing Next.js 15 + Supabase authentication foundation. Core architecture: leverage existing middleware.ts Phase 2 slot, hierarchical config pattern, device confidence scoring (30/25/20/25 weights), and strict TypeScript compliance. Integration points: Redis ZSET sliding window rate limiting, NIST AAL2-compliant 2FA/MFA with TOTP, structured security logging replacing console.log, and Resend email notifications. Must maintain shrimp-rules.md compliance and existing Auth→RateLimiting→Validation→BusinessLogic middleware ordering."
+      "analysisResult": "Phase 3 Advanced Security Implementation: Build enterprise-grade security features on existing Next.js 15 + Supabase authentication foundation. Core architecture: leverage existing middleware.ts Phase 2 slot, hierarchical config pattern, device confidence scoring (30/25/20/25 weights), and strict TypeScript compliance. Integration points: Redis ZSET sliding window rate limiting, NIST AAL2-compliant 2FA/MFA with TOTP, structured security logging replacing console.log, and Resend email notifications. Must maintain shrimp-rules.md compliance and existing Auth→RateLimiting→Validation→BusinessLogic middleware ordering.",
+      "summary": "Successfully implemented comprehensive NIST SP 800-63B compliant AAL Management System with AAL1/AAL2 support, automatic session upgrading, device session tracking, and complete middleware integration for operation-level access control.",
+      "completedAt": "2025-07-10T11:45:21.001Z"
     },
     {
       "id": "5389c723-bc7e-42e8-b272-bf11801dd72e",
